# electromechanical-lsp-client

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  cmake-config.h.in  glib2.supp
cmake/: FindLibevent.cmake  Findtinycthread.cmake  SetCompilerFlags.cmake
src/: CMakeLists.txt  Common.hh  basic_loop.cc  client.cc  client.hh  client_details.hh  connection_impl.cc  connection_impl.hh  dothemsg.cc  finally.cc  lazy.hh  libevent.cc  libevent.hh  main.cc  nlohmann.cc  pch.hh  rapid.cc  rapid.hh  rpc.cc  sigh.cc  testing01.cc  testing02.cc  testing03.cc  toploop.hh
src/event/: event.cc  loop.cc  loop.hh  test.cc
src/ipc/: base_client.cc  base_client.hh  base_connection.cc  base_connection.hh  base_connection_details.hh  base_message.hh  base_wait_loop.hh  basic_connection.hh  basic_dialer.hh  basic_io_connection.hh  basic_io_wrapper.hh  basic_loop.hh  basic_protocol_connection.hh  basic_rpc_connection.hh  basic_sync_thing.hh  basic_wrapper.hh  connection_impl.cc  connection_impl.hh  connection_interface.hh  dialer.hh  forward.hh  ipc_connection.hh  main_loop.hh  misc.hh  process_connection.hh  toploop.hh  totality.hh
src/ipc/io/: basic_io_wrapper.hh  ms_jsonrpc_io_wrapper.hh  msgpack_io_wrapper.hh
src/ipc/lsp/: lsp-client.cc  lsp-client.hh  lsp-connection.hh  lsp-message.hh  static-data.cc  static-data.hh
src/ipc/protocols/: ms_jsonrpc_connection.hh  msgpack_connection.hh
src/ipc/rpc/: basic_io_connection.hh  basic_msgpack_connection.hh  basic_wrapper.hh  lsp.hh  microsoft_jsonrpc.hh  neovim.hh  rpc.hh
src/ipc/rpc/lsp/: lsp_connection.hh  static-data.cc  static-data.hh
src/ipc/rpc/neovim/: api.hh  neovim_connection.hh
src/json/: rapid.hh
src/lsp-protocol/: lsp-client.cc  lsp-client.hh  lsp-connection.hh  lsp-protocol.cc  lsp-protocol.hh  static-data.cc  static-data.hh
src/mpack/: format.cc
src/msgpack/: dumper.cc  dumper.hh
src/rpc/: json.hh  object.cc  object.hh
src/util/: c_util.c  c_util.h  charconv.cc  charconv.hh  concepts.hh  debug_trap.h  deleters.hh  demangle.cc  err.c  errno.hh  exceptions.hh  formatters.hh  hackish_templates.hh  initializer_hack.h  macros.h  misc.hh  my_glib.hh  myerr.h  recode.cc  recode.hh  signals.cc  socket.cc  socket.hh  strings.hh  tmpfile.c  types.h  util.cc  util.hh
src/util/c/: c_util.c  c_util.h  debug_trap.h  err.c  initializer.h  macros.h  myerr.h  tmpfile.c  types.h
src/util/recode/: recode.cc  recode.hh  recode_private.hh  strlen.hh
src/why/: simple.cc
